hard-gists/4047394/run.log
=== Docker Run Log for 4047394 ===
Started at: Mi 29. Okt 14:18:40 CET 2025

[2025-10-29 14:18:41] START: Running container for 4047394
[2025-10-29 14:18:41] SUCCESS: Container 8049438193c2a42cd9930e3a78aee9bcbf037195f44507dd8a2d9b7bcfef7942 started for 4047394
=== Container logs for 4047394 ===
  File "/snippet.py", line 29
    print line
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4047394 ===
[2025-10-29 14:18:43] INFO: Container 8049438193c2a42cd9930e3a78aee9bcbf037195f44507dd8a2d9b7bcfef7942 has stopped
